--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -48,7 +48,7 @@
         <a class="nav-link" href="{{ url_for('user.dashboard') }}">Home </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Summary</a>
+        <a class="nav-link" href="{{ url_for('admin.summary') }}">Summary</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="{{ url_for('auth.login')}}">Logout</a>
