--- a/templates/register.html
+++ b/templates/register.html
@@ -21,6 +21,11 @@
     <label>Pincode</label>
     <input type="text" name="pincode" class="form-control" required />
   </div>
+  <div class="mb-3">
+    <label>Phone Number</label>
+    <input type="text" name="phone_no" class="form-control" required />
+  </div>
+  
   <button class="btn btn-success" type="submit">Register</button>
   <p class="mt-3">
     Already have an account? <a href="{{ url_for('auth.login') }}">Login</a>
